k8s/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: nicolascf/flask-app:1.0.0-c5220cd
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolume:
            persistentVolumeReclaimPolicy: Retain # Referenciando o PV diretamente
