k8s/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: application
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort  # Pode ser LoadBalancer se precisar de acesso externo
